--- a/keepalived/keepalived.conf
+++ b/keepalived/keepalived.conf
@@ -1,16 +1,20 @@
 global_defs {
-  enable_script_security 0
+  enable_script_security 1
 }
 
 vrrp_script chk_oracle {
   script       "/usr/local/bin/keepalive_oracle.sh testdb1 c##check_mk monitoring 1522 testdb1"
+  timeout 20
   interval 60  # check every 2 seconds
   fall 5       # require 2 failures for KO
   rise 2       # require 2 successes for OK
 }
 
 vrrp_instance VI_1 {
-  state MASTER
+@oradg01.local  state MASTER
+@oradg02.local  state BACKUP
+
+  priority 150
   interface enp0s8
   virtual_router_id 51
   priority 150
