keepalived: some comments and global keepalived.conf

--- a/keepalived/keepalived.conf
+++ b/keepalived/keepalived.conf
@@ -2,32 +2,40 @@ global_defs {
   enable_script_security 1
 }
 
-vrrp_script chk_oracle {
-  script       "/usr/local/bin/keepalive_oracle.sh testdb1 c##check_mk monitoring 1522 testdb1"
+vrrp_script chk_oracle_inst1 {
+  script       "/usr/local/bin/keepalived_oracle.sh testdb1 c##check_mk monitoring 1522 testdb1"
   timeout 20
-  interval 60  # check every 2 seconds
-  fall 5       # require 2 failures for KO
+  interval 60  # check every 60 seconds
+  fall 5       # require 5 failures for KO
   rise 2       # require 2 successes for OK
 }
 
-vrrp_instance VI_1 {
+vrrp_script chk_oracle_inst2 {
+  script       "/usr/local/bin/keepalived_oracle.sh testdb2 c##check_mk monitoring 1522 testdb2"
+  timeout 20
+  interval 60  # check every 60 seconds
+  fall 5       # require 5 failures for KO
+  rise 2       # require 2 successes for OK
+}
+
+vrrp_instance VI_testdb {
 @oradg01.local  state MASTER
 @oradg02.local  state BACKUP
 
-  priority 150
+@oradg01.local  priority 150
+@oradg02.local  priority 100
   interface enp0s8
-  virtual_router_id 51
-  priority 150
+  virtual_router_id 1
   advert_int 1
   authentication {
     auth_type PASS
     auth_pass mypass
   }
-
   virtual_ipaddress {
     192.168.56.231/24 dev enp0s8 label enp0s8:1
   }
   track_script {
-    chk_oracle
+@oradg01.local     chk_oracle_inst1
+@oradg02.local     chk_oracle_inst2
   }
 }
