keepalived: config update

--- a/keepalived/keepalived.conf
+++ b/keepalived/keepalived.conf
@@ -5,6 +5,7 @@ global_defs {
 vrrp_script chk_oracle_inst1 {
   script       "/usr/local/bin/keepalived_oracle.sh testdb1 c##check_mk monitoring 1522 testdb1"
   timeout 20
+  weight 100
   interval 60  # check every 60 seconds
   fall 5       # require 5 failures for KO
   rise 2       # require 2 successes for OK
@@ -13,17 +14,17 @@ vrrp_script chk_oracle_inst1 {
 vrrp_script chk_oracle_inst2 {
   script       "/usr/local/bin/keepalived_oracle.sh testdb2 c##check_mk monitoring 1522 testdb2"
   timeout 20
+  weight 100
   interval 60  # check every 60 seconds
   fall 5       # require 5 failures for KO
   rise 2       # require 2 successes for OK
 }
 
 vrrp_instance VI_testdb {
-@oradg01.local  state MASTER
-@oradg02.local  state BACKUP
+  state MASTER
+#  state BACKUP
 
-@oradg01.local  priority 150
-@oradg02.local  priority 100
+  priority 100
   interface enp0s8
   virtual_router_id 1
   advert_int 1
@@ -35,7 +36,7 @@ vrrp_instance VI_testdb {
     192.168.56.231/24 dev enp0s8 label enp0s8:1
   }
   track_script {
-@oradg01.local     chk_oracle_inst1
-@oradg02.local     chk_oracle_inst2
+    chk_oracle_inst1
+#    c hk_oracle_inst2
   }
 }
