--- a/keepalived/keepalived.conf
+++ b/keepalived/keepalived.conf
@@ -3,21 +3,21 @@ global_defs {
 }
 
 vrrp_script chk_oracle_inst1 {
-  script       "/usr/local/bin/keepalived_oracle.sh testdb1 c##check_mk monitoring 1522 testdb1"
+  script       "/usr/local/bin/keepalived_oracle.sh /etc/keepalived/check_oracle_testdb.cfg"
   timeout 20
-  weight 100
-  interval 60  # check every 60 seconds
-  fall 5       # require 5 failures for KO
-  rise 2       # require 2 successes for OK
+  weight 100   # weight is important, otherwise state goes FAILED with unbind of VIP!
+  interval 120 # check every 120 seconds
+  fall 2       # require 2 failures for KO
+  rise 1       # require 1 successes for OK
 }
 
 vrrp_script chk_oracle_inst2 {
-  script       "/usr/local/bin/keepalived_oracle.sh testdb2 c##check_mk monitoring 1522 testdb2"
+  script       "/usr/local/bin/keepalived_oracle.sh /etc/keepalived/check_oracle_testdb.cfg"
   timeout 20
-  weight 100
-  interval 60  # check every 60 seconds
-  fall 5       # require 5 failures for KO
-  rise 2       # require 2 successes for OK
+  weight 100   # weight is important, otherwise state goes FAILED with unbind of VIP!
+  interval 120 # check every 120 seconds
+  fall 2       # require 2 failures for KO
+  rise 1       # require 1 successes for OK
 }
 
 vrrp_instance VI_testdb {
